added AI , and maps
